added extra lines

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
-  <h1> Hello Gareth this is your website! </h1>
+  <h1> Hello Gareth this is your website! I changed this </h1>
+  <p> This website now has twice as many lines</p>
 
 </body>
