Revert "added extra lines"
This reverts commit 18258a3c1a4476681f707a9a188719eb84b4d857.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-  <h1> Hello Gareth this is your website! I changed this </h1>
-  <p> This website now has twice as many lines</p>
+  <h1> Hello Gareth this is your website! </h1>
 
 </body>
